--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start-ip": "HOSTIP=192.168.23.4 node server.js",
     "lint": "eslint src",
     "build-mac": "export NODE_ENV=production && webpack --progress --hide-modules --config webpack.config.js",
-    "build-win": "set NODE_ENV=production&& webpack --progress --hide-modules --config webpack.config.js",
+    "build-win": "set NODE_ENV=production&& webpack --progress --hide-modules --config webpack.config.js"
   },
   "repository": {
     "type": "git",
